alpm-buildinfo/tests/snapshots/integration__write_buildinfo__case_1_buildinfov1_all_fields_via_cli.snap
---
source: alpm-buildinfo/tests/integration.rs
expression: build_info.to_string()
---
format = 1
pkgname = foo
pkgbase = foo
pkgver = 1:1.0.0-1
pkgarch = any
pkgbuild_sha256sum = b5bb9d8014a0f9b1d61e21e796d78dccdf1352f23cd32812f4850b878ae4944c
packager = Foobar McFooface <foobar@mcfooface.org>
builddate = 1
builddir = /build
buildenv = foo
buildenv = bar
options = some_option
options = !other_option
installed = bar-1.2.3-1-any
installed = beh-2.2.3-4-any
